<resources>
    <string name="app_name">Impact</string>
    <string name="image_description_headline_image">Headline Image</string>
    <string name="in_print_page">https://issuu.com/impact_magazine</string>
    <string name="impact_caps">IMPACT</string>
    <string name="print_issue">PRINT ISSUE</string>
    <string name="releases_in">RELEASES IN</string>
    <string name="placeholder_days_number">00</string>
    <string name="days">DAYS</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="features">Features</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="entertainment">Entertainment</string>
    <string name="reviews">Reviews</string>
    <string name="sport">Sport</string>
    <string name="podcasts">Podcasts</string>
    <string name="get_involved">Get Involved</string>
    <string name="categories">Categories</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="butterknife_license">Copyright 2013 Jake Wharton\nLicensed under the Apache License, Version 2.0 (the \"License\");\nyou may not use this file except in compliance with the License. You may obtain a copy of the License at\nhttp://www.apache.org/licenses/LICENSE-2.0\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="glide_license">Copyright 2014 Google, Inc. All rights reserved.\n\nRedistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:\n\n    1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.\n    2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.\n\nTHIS SOFTWARE IS PROVIDED BY GOOGLE, INC. `AS IS\'\' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL GOOGLE, INC. OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.\n\nThe views and conclusions contained in the software and documentation are those of the authors and should not be interpreted as representing official policies, either expressed or implied, of Google, Inc.</string>
    <string name="about">About</string>
</resources>
