<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/print_countdown_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:padding="24dp"

    android:fitsSystemWindows="true"

    android:background="@color/cardview_dark_background"
    android:elevation="@dimen/standard_elevation">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:paddingTop="@dimen/print_issue_countdown_vertical_padding"


        android:fontFamily="@font/fredoka_one"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/h4"
        android:text="@string/print_issue"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:fontFamily="@font/fredoka_one"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/h5"
        android:text="@string/releases_in"
        />
    
    <LinearLayout
        android:id="@+id/countdown_time_view"

        android:gravity="bottom|center"
        android:paddingBottom="@dimen/print_issue_countdown_vertical_padding"

        android:layout_width="match_parent"
        android:layout_height="86dp">

        <TextView
            android:id="@+id/print_issue_countdown"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/fredoka_one"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/h4"
            android:text="@string/placeholder_days_number"
            />
        <TextView
            android:id="@+id/print_issue_countdown_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"

            android:fontFamily="@font/fredoka_one"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/h4"
            android:text="@string/days"
            />

    </LinearLayout>

</LinearLayout>